--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.5",
     "@primevue/themes": "^4.1.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
